[package]
name = "tvm"
version = "0.0.0"
license = "Apache-2.0"
description = "TVM Rust runtime"
repository = "https://github.com/dmlc/tvm-rs"
readme = "README.md"
keywords = ["tvm", "nnvm"]
categories = ["api-bindings", "science"]
authors = ["Nick Hynes <nhynes@berkeley.edu>"]

[dependencies]
error-chain = { version = "0.11.0", default-features = false }
lazy_static = "1.0.0"
ndarray = "0.11.2"

[build-dependencies]
bindgen = "0.37"
